--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -890,28 +890,28 @@
     }
    ],
    "source": [
-    "# Seleccionar la columna de interés (por ejemplo, una columna llamada 'Descripcion')\n",
+    "# Selecciona la columna\n",
     "columna_interes_uno = df['¿Cuál es tu motivación y/ó expectativa para postular al programa Track de mujeres?']\n",
     "\n",
-    "# Combinar todos los textos de la columna en una sola cadena\n",
+    "# Combina los textos de la columna en una sola cadena\n",
     "texto_comb_uno = ' '.join(columna_interes_uno.dropna().astype(str))\n",
     "\n",
-    "# Eliminar caracteres no alfanuméricos y convertir a minúsculas\n",
+    "# Elimina caracteres no alfanuméricos y convertir a minúsculas\n",
     "palabras_uno = re.findall(r'\\b\\w+\\b', texto_comb_uno.lower())\n",
     "\n",
-    "# Definir una lista de stopwords\n",
+    "# Define una lista de stopwords\n",
     "stopwords_uno = {'la', 'el', 'mi', 'y', 'de', 'que', 'en', 'a', 'los', 'las', 'un', 'una', 'con', 'por', 'para', 'es', 'al', 'lo', 'como', 'más', 'mis', 'me', 'del', 'así', 'ser', 'su', 'muy', 'o'}\n",
     "\n",
-    "# Filtrar las stopwords\n",
+    "# Filtra las stopwords\n",
     "palabras_filtradas_uno = [palabra for palabra in palabras_uno if palabra not in stopwords_uno]\n",
     "\n",
-    "# Contar la frecuencia de cada palabra\n",
+    "# Cuenta la frecuencia de cada palabra\n",
     "conteo_palabras_uno = Counter(palabras_filtradas_uno)\n",
     "\n",
-    "# Obtener las 10 palabras más comunes\n",
+    "# Obtiene las 250 palabras más comunes\n",
     "palabras_comunes_uno = conteo_palabras_uno.most_common(250)\n",
     "\n",
-    "# Mostrar las palabras más comunes\n",
+    "# Muestra las palabras más comunes\n",
     "palabras_comunes_uno\n"
    ]
   },
@@ -932,13 +932,13 @@
     }
    ],
    "source": [
-    "# Unir las palabras filtradas de nuevo en un solo texto\n",
+    "# Une las palabras filtradas de nuevo en un solo texto\n",
     "texto_filtrado_uno = ' '.join(palabras_filtradas_uno)\n",
     "\n",
-    "# Crear la nube de palabras\n",
+    "# Crea la nube de palabras\n",
     "wordcloud_uno = WordCloud(width=800, height=400, background_color='white', stopwords=stopwords_uno).generate(texto_filtrado_uno)\n",
     "\n",
-    "# Mostrar la nube de palabras\n",
+    "# Muestra la nube de palabras\n",
     "plt.figure(figsize=(10, 5))\n",
     "plt.imshow(wordcloud_uno, interpolation='bilinear')\n",
     "plt.axis('off')  # No mostrar los ejes\n",
@@ -951,7 +951,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definir las categorías y las palabras/frases clave asociadas\n",
+    "# Define las categorías y las palabras/frases clave asociadas\n",
     "categorias_uno = {\n",
     "    'Crecer personalmente y actualizar sus conocimientos.': ['crecer', 'conocimientos', 'adquirir', 'potenciar', 'conocimiento', 'desarrollar', 'habilidades', 'fortalecer', 'crecimiento', 'capacitarme', 'superarme', 'actualizarme', 'aprendizaje'],\n",
     "    'Mejorar el trabajo en equipo y aumentar las ventas de su emprendimiento.': ['mejorar', 'trabajo', 'equipo', 'ventas', 'emprendimiento', 'negocio', 'lograr', 'empresa', 'clientes', 'networking', 'generar', 'liderazgo', 'emprendedor', 'aumentar', 'mejores', 'ventas', 'negocios'],\n",
@@ -962,7 +962,7 @@
     "    'Ser dueñas de su tiempo.': ['dueñas', 'tiempo', 'tener', 'independiente', 'vida', 'gestionar', 'tiempo', 'organización']\n",
     "}\n",
     "\n",
-    "# Definir una función de categorización\n",
+    "# Define una función de categorización\n",
     "def categorizar_descripcion_uno(descripcion_uno):\n",
     "    descripcion_uno = descripcion_uno.lower()  # Convertir a minúsculas para la comparación\n",
     "    for categoria_uno, palabras_clave_uno in categorias_uno.items():\n",
@@ -971,7 +971,7 @@
     "                return categoria_uno\n",
     "    return 'Otro'\n",
     "\n",
-    "# Aplicar la función a la columna 'Descripcion'\n",
+    "# Aplica la función a la columna\n",
     "df['Categorizacion_Motivacion_Expectativa_Postulacion'] = df['¿Cuál es tu motivación y/ó expectativa para postular al programa Track de mujeres?'].apply(categorizar_descripcion_uno)\n",
     "\n"
    ]
@@ -1284,28 +1284,28 @@
     }
    ],
    "source": [
-    "# Seleccionar la columna de interés (por ejemplo, una columna llamada 'Descripcion')\n",
+    "# Selecciona la columna de interés\n",
     "columna_interes_dos = df['Actualmente, ¿Cuáles son las 3 habilidades,  fortalezas o conocimientos que destacarías de ti?']\n",
     "\n",
-    "# Combinar todos los textos de la columna en una sola cadena\n",
+    "# Combina todos los textos de la columna en una sola cadena\n",
     "texto_comb_dos = ' '.join(columna_interes_dos.dropna().astype(str))\n",
     "\n",
-    "# Eliminar caracteres no alfanuméricos y convertir a minúsculas\n",
+    "# Elimina caracteres no alfanuméricos y convertir a minúsculas\n",
     "palabras_dos = re.findall(r'\\b\\w+\\b', texto_comb_dos.lower())\n",
     "\n",
-    "# Definir una lista de stopwords\n",
+    "# Define una lista de stopwords\n",
     "stopwords_dos = {'la', 'el', 'mi', 'y', 'de', 'que', 'en', 'a', 'los', 'las', 'un', 'una', 'con', 'por', 'para', 'es', 'al', 'lo', 'como', 'más', 'mis', 'me', 'del', 'así', 'ser', 'su', 'muy', 'o', 'no', 'si', 'se', 'he', 'pero', 'algo','cómo', 'nos','da', 'soy'}\n",
     "\n",
-    "# Filtrar las stopwords\n",
+    "# Filtra las stopwords\n",
     "palabras_filtradas_dos = [palabra for palabra in palabras_dos if palabra not in stopwords_dos]\n",
     "\n",
-    "# Contar la frecuencia de cada palabra\n",
+    "# Cuenta la frecuencia de cada palabra\n",
     "conteo_palabras_dos = Counter(palabras_filtradas_dos)\n",
     "\n",
-    "# Obtener las 10 palabras más comunes\n",
+    "# Obtiene las 250 palabras más comunes\n",
     "palabras_comunes_dos = conteo_palabras_dos.most_common(250)\n",
     "\n",
-    "# Mostrar las palabras más comunes\n",
+    "# Muestra las palabras más comunes\n",
     "palabras_comunes_dos"
    ]
   },
@@ -1326,13 +1326,13 @@
     }
    ],
    "source": [
-    "# Unir las palabras filtradas de nuevo en un solo texto\n",
+    "# Une las palabras filtradas de nuevo en un solo texto\n",
     "texto_filtrado_dos = ' '.join(palabras_filtradas_dos)\n",
     "\n",
-    "# Crear la nube de palabras\n",
+    "# Crea la nube de palabras\n",
     "wordcloud_dos = WordCloud(width=800, height=400, background_color='white', stopwords=stopwords_dos).generate(texto_filtrado_dos)\n",
     "\n",
-    "# Mostrar la nube de palabras\n",
+    "# Muestra la nube de palabras\n",
     "plt.figure(figsize=(10, 5))\n",
     "plt.imshow(wordcloud_dos, interpolation='bilinear')\n",
     "plt.axis('off')  # No mostrar los ejes\n",
@@ -1346,7 +1346,7 @@
    "outputs": [],
    "source": [
     "# Palabras clave más usadas y sus respectivas categorías\n",
-    "# Definir las categorías y sus palabras clave\n",
+    "# Define las categorías y sus palabras clave\n",
     "palabras_claves_dos = {\n",
     "    'Emprendimiento e Innovación': [\n",
     "        'emprendedora', 'emprendimiento', 'innovación', 'innovar', 'ideas', 'soluciones', 'visionaria', \n",
@@ -1414,10 +1414,9 @@
     "            return categoria\n",
     "    return \"Otras\"\n",
     "\n",
-    "# Aplicar la categorización a la columna 'Frustraciones'\n",
+    "# Aplica la categorización a la columna \n",
     "df['Categoria_Habilidades_Destacadas'] = df['Actualmente, ¿Cuáles son las 3 habilidades,  fortalezas o conocimientos que destacarías de ti?'].apply(lambda x: categorizar_dos(x, palabras_claves_dos))\n",
     "\n",
-    "# Mostrar el resultado\n",
     "#df"
    ]
   },
@@ -1451,7 +1450,7 @@
     }
    ],
    "source": [
-    "df['Categoria_Habilidades_Destacadas'].value_counts()"
+    "df['Categoria_Habilidades_Destacadas'].value_counts()   #método usado para contar las categorías"
    ]
   },
   {
@@ -1784,28 +1783,28 @@
     }
    ],
    "source": [
-    "# Seleccionar la columna de interés (por ejemplo, una columna llamada 'Descripcion')\n",
+    "# Selecciona la columna de interés\n",
     "columna_interes_tres = df['¿Qué habilidades o conocimientos podrías o te gustaría adquirir o mejorar a través del programa?']\n",
     "\n",
-    "# Combinar todos los textos de la columna en una sola cadena\n",
+    "# Combina los textos de la columna en una sola cadena\n",
     "texto_comb_tres = ' '.join(columna_interes_tres.dropna().astype(str))\n",
     "\n",
-    "# Eliminar caracteres no alfanuméricos y convertir a minúsculas\n",
+    "# Elimina caracteres no alfanuméricos y convertir a minúsculas\n",
     "palabras_tres = re.findall(r'\\b\\w+\\b', texto_comb_tres.lower())\n",
     "\n",
-    "# Definir una lista de stopwords\n",
+    "# Define una lista de stopwords\n",
     "stopwords_tres = {'la', 'el', 'mi', 'y', 'de', 'que', 'en', 'a', 'los', 'las', 'un', 'una', 'con', 'por', 'para', 'es', 'al', 'lo', 'como', 'más', 'mis', 'me', 'del', 'así', 'ser', 'su', 'muy', 'o', 'si', 'no', 'ha', 'son', 'esta', 'doy', 'soy'}\n",
     "\n",
-    "# Filtrar las stopwords\n",
+    "# Filtra las stopwords\n",
     "palabras_filtradas_tres = [palabra_tres for palabra_tres in palabras_tres if palabra_tres not in stopwords_tres]\n",
     "\n",
-    "# Contar la frecuencia de cada palabra\n",
+    "# Cuenta la frecuencia de cada palabra\n",
     "conteo_palabras_tres = Counter(palabras_filtradas_tres)\n",
     "\n",
-    "# Obtener las 10 palabras más comunes\n",
+    "# Obtiene las palabras más comunes\n",
     "palabras_comunes_tres = conteo_palabras_tres.most_common(300)\n",
     "\n",
-    "# Mostrar las palabras más comunes\n",
+    "# Muestra las palabras más comunes\n",
     "palabras_comunes_tres"
    ]
   },
@@ -1826,13 +1825,13 @@
     }
    ],
    "source": [
-    "# Unir las palabras filtradas de nuevo en un solo texto\n",
+    "# Une las palabras filtradas de nuevo en un solo texto\n",
     "texto_filtrado_tres = ' '.join(palabras_filtradas_tres)\n",
     "\n",
-    "# Crear la nube de palabras\n",
+    "# Crea la nube de palabras\n",
     "wordcloud_tres = WordCloud(width=800, height=400, background_color='white', stopwords=stopwords_tres).generate(texto_filtrado_tres)\n",
     "\n",
-    "# Mostrar la nube de palabras\n",
+    "# Muestra la nube de palabras\n",
     "plt.figure(figsize=(10, 5))\n",
     "plt.imshow(wordcloud_tres, interpolation='bilinear')\n",
     "plt.axis('off')  # No mostrar los ejes\n",
@@ -1845,7 +1844,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definir las categorías y sus palabras clave\n",
+    "# Define las categorías y sus palabras clave\n",
     "categorias_tres = {\n",
     "    'Toma de decisiones y negociación': [\n",
     "        'decisiones', 'negociación', 'estrategia', 'resolución', 'conflictos', 'resolver', 'planificar', \n",
@@ -1913,7 +1912,7 @@
     "    ],\n",
     "}\n",
     "\n",
-    "# Definir una función de categorización\n",
+    "# Define una función de categorización\n",
     "def categorizar_descripcion_tres(descripcion_tres):\n",
     "    descripcion_tres = descripcion_tres.lower()  # Convertir a minúsculas para la comparación\n",
     "    for categoria_tres, palabras_claves_tres in categorias_tres.items():\n",
@@ -1922,7 +1921,7 @@
     "                return categoria_tres\n",
     "    return 'Otro'\n",
     "\n",
-    "# Aplicar la función a la columna 'Descripcion'\n",
+    "# Aplica la función a la columna 'Descripcion'\n",
     "df['Categorizacion_Habilidad_Adquisicion'] = df['¿Qué habilidades o conocimientos podrías o te gustaría adquirir o mejorar a través del programa?'].apply(categorizar_descripcion_tres)\n",
     "\n"
    ]
@@ -1952,6 +1951,7 @@
     }
    ],
    "source": [
+    "#método usado para contar las categorías\n",
     "df['Categorizacion_Habilidad_Adquisicion'].value_counts()"
    ]
   },
